# tsflex

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO  example.ipynb  pyproject.toml  requirements.txt  setup.py
.github/: deploy-gh-pages.sh
.github/workflows/: codeql.yml  codspeed.yml  deploy-docs.yml  lint.yml  test.yml
data/: gsr.feather  labels.csv  physio.feather  tmp.feather
docs/: index.html
docs/chunking/: chunking.html  index.html
docs/features/: feature.html  feature_collection.html  feature_collection_sk.html  function_wrapper.html  index.html  integrations.html  logger.html  strided_rolling.html  utils.html
docs/features/segmenter/: index.html  strided_rolling.html  strided_rolling_factory.html
docs/pdoc_include/: features.md  processing.md  root_documentation.md  tsflex_matrix.md
docs/pdoc_template/: config.mako  css.mako  html.mako  logo.mako
docs/pipeline/: dataframe_operator.html  dataframe_oprator.html  index.html  pipeline.html
docs/processing/: index.html  logger.html  series_pipeline.html  series_pipeline_sk.html  series_processor.html  utils.html
docs/templates/: config.mako
examples/: Example-tsflex_paper.ipynb  README.md  antropy_integration.ipynb  example.ipynb  example_ozone_level_detection.ipynb  example_power_consumption_estimation.ipynb  example_sleep_staging.ipynb  seglearn_integration.ipynb  tsfel_integration.ipynb  tsflex_paper.ipynb  tsfresh_integration.ipynb  verbose_example.ipynb
examples/benchmarking/: benchmark_visualizations.ipynb
examples/data/: README.md  group_data.csv  grouped_data.parquet  time_series_data.csv
examples/data/empatica/: acc.parquet  gsr.parquet  ibi.parquet  tmp.parquet
examples/power_consumption/: example_power_consumption_estimation.ipynb  predict_new_environment.ipynb  requirements.txt
tests/: test_chunking.py  test_feature_collection.py  test_features_feature_collection.py  test_features_feature_descriptor.py  test_features_func_wrapper.py  test_features_integration.py  test_features_logging.py  test_features_utils.py  test_processing.py  test_processing_logging.py  test_processing_series_pipeline.py  test_processing_series_processor.py  test_processing_sk_series_pipeline.py  test_processing_skseries_pipeline.py  test_processing_utils.py  test_strided_rolling.py  test_stroll_factory.py  test_tsflex_utils.py  test_utils.py  utils.py
tests/benchmarks/: test_chunking.py  test_featurecollection.py
time_series/: README.md  __init__.py  chunking.py  function.py  strided_rolling.py  utils.py
time_series/features/: __init__.py  feature.py  feature_collection.py  feature_collection_estimator.py  feature_collection_sk.py  feature_extraction.py  function_wrapper.py  logger.py  strided_rolling.py
time_series/models/: __init__.py  pipeline.py
time_series/processing/: __init__.py  filter.py  logger.py  processor.py  series_pipeline.py  series_pipeline_sk.py  series_processor.py  series_processor_pipeline.py  series_processor_pipeline_sk.py  utils.py
time_series/utils/: __init__.py  classes.py  data.py  series_dict.py  timedelta.py
tsflex/: __init__.py  chunking.py
tsflex/chunking/: __init__.py  chunking.py  chunking_tmp.py
tsflex/features/: __init__.py  feature.py  feature_collection.py  feature_collection_sk.py  function_wrapper.py  integrations.py  logger.py  strided_rolling.py  utils.py
tsflex/features/segmenter/: __init__.py  strided_rolling.py  strided_rolling_factory.py
tsflex/pipeline/: __init__.py  dataframe_operator.py  dataframe_oprator.py  pipeline.py  sk_feature_collection.py  sk_series_pipeline.py
tsflex/processing/: __init__.py  logger.py  series_pipeline.py  series_pipeline_sk.py  series_processor.py  utils.py
tsflex/utils/: argument_parsing.py  attribute_parsing.py  classes.py  data.py  logging.py  time.py  timedelta.py
