[tool.poetry]
name = "tsflex"
version = "0.2.3.7"  # Do not forget to update the __init__.py __version__ variable
description = "Toolkit for flexible processing & feature extraction on time-series data"
authors = ["Jonas Van Der Donckt, Jeroen Van Der Donckt, Emiel Deprost"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/predict-idlab/tsflex"
documentation = "https://predict-idlab.github.io/tsflex"
keywords = ["time-series", "processing", "feature-extraction", "data-science", "machine learning"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"  # When deploying set this to 3.7
pandas = "^1.3.5"
numpy = "^1.21.5"
tqdm = "^4.62.3"
multiprocess = "^0.70.12"
dill = "^0.3.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
pydocstyle = "^5.1.1"
Sphinx = "^3.5.2"
jupyterlab = "^3.2.9"
memory-profiler = "^0.58.0"
pytest = "^6.2.3"
pytest-cov = "^2.12.1"
pdoc3 = "^0.9.2"
scipy = "^1.7.3"
seglearn = "^1.2.3"
tsfresh = "^0.18.0"
tsfel = "^0.1.4"
statsmodels = "0.12.2"  # Added bc of this: https://github.com/blue-yonder/tsfresh/issues/897
fastparquet = "0.8.0"  # Lock to this version to resolve issue on macos with python 3.7
catch22 = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
